syntax = "proto3";

package user;

option go_package = "github.com/diegom0ta/go-grpc-gofiber/pb";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
